--- a/index.html
+++ b/index.html
@@ -5,21 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <h2 class="title">Rock | Paper | Scissor</h2>
-        <button class="btn-1" onclick="Draw1()">Draw for Player 1</button>
-        <button class="btn-2" onclick="Draw2()">Draw for Player 2</button>
-        <div class="playersDraw">
-            <p class="player1">Player 1: </p>
-            <p class="player2">Player 2: </p>
-        </div>
-        <!-- <button class="check" onclick="checkWinner()">Check</button> -->
-        <p class="winner">Winner: </p>
-    </div>
+    <div id="main">
 
+        <!-- Container -->
+        <div class="container">
+
+            
+            <h2 class="title">Rock | Paper | Scissor</h2>
+            <button class="btn-1" onclick="Draw1()">Draw for Player 1</button>
+            <button class="btn-2" onclick="Draw2()">Draw for Player 2</button>
+
+            <button class="reset" onclick="resetGame()">
+                <i class="fa fa-refresh" aria-hidden="true"></i>
+            </button>
+
+            <div class="playersDraw">
+                <p class="player1">Player 1: </p>
+                <p class="player2">Player 2: </p>
+            </div>
+
+            <!-- <button class="check" onclick="checkWinner()">Check</button> -->
+            <p class="winner">Winner: </p>
+
+
+            
+
+        </div>
+    </div>
 
 
 <script src="index.js"></script>
