added contact section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
             <!-- <button class="check" onclick="checkWinner()">Check</button> -->
             <p class="winner">Winner: </p>
 
-
-            
-
         </div> 
+
+    </div>
+
+    <div class="contact">
+        <a href="https://www.linkedin.com/in/aryan-hazarika/" class="linkedin-btn"> <i class="fa-brands fa-linkedin fa-xl"></i>  </a>
+        <a href="https://github.com/aryanh0911" class="github-btn"> <i class="fa-brands fa-github fa-xl"></i> </a>
+        <a href="https://twitter.com/aryan_hazarika_" class="twitter-btn"> <i class="fa-brands fa-square-twitter fa-xl"></i>  </a>
     </div>
 
 
