--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
 
             
-            <h2 class="title">Rock | Paper | Scissor</h2>
+            <h2 class="title"> <span class="rock">Rock |</span> <span class="paper">Paper |</span> <span class="scissor">Scissor </span></h2>
             <button class="btn-1" onclick="Draw1()">Draw for Player 1</button>
             <button class="btn-2" onclick="Draw2()">Draw for Player 2</button>
 
@@ -41,6 +41,9 @@
         <a href="https://twitter.com/aryan_hazarika_" class="twitter-btn"> <i class="fa-brands fa-square-twitter fa-xl"></i>  </a>
     </div>
 
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="index.js"></script> 
 </body>
